--- a/Site.css
+++ b/Site.css
@@ -35,3 +35,36 @@ textarea {
     display: table;
     clear: both;
   }
+/* Add a black background color to the top navigation */
+.topnav {
+  background-color: black ; /*#90EE90*/
+  overflow: hidden;
+}
+
+/* Style the links inside the navigation bar */
+.topnav a {
+  float: left;
+  color: white; /*black*/
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+/* Change the color of links on hover */
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+/* Add a color to the active/current link */
+.topnav a.active {
+  background-color: gray; /*#4CAF50;*/
+  color: white;
+}
+
+.center{
+
+  margin: auto;
+vertical-align: middle;
+}
