--- a/Site.css
+++ b/Site.css
@@ -56,6 +56,9 @@ textarea {
   background-color: #ddd;
   color: black;
 }
+.opacity{
+    opacity: 0.2;
+}
 
 /* Add a color to the active/current link */
 .topnav a.active {
@@ -63,11 +66,16 @@ textarea {
   color: white;
 }
 
-#homepage {
-   background-image: url("sandy-beach-with-rocks.jpg");
-    opacity: 0.2;
-       
+
+.my-container img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: auto;
+    z-index: 1;
+    opacity: 0.5;
 }
-.opacitynone{
-    opacity: 1;
+img{
+    filter: grayscale(100%);
 }
